src/test/deca/context/invalid/created/cast/int_null.deca
// Description :
//    test cast entre un int et null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.39) Cast impossible de <type1> vers <type2>

class A {}
{
(int)(null);
}
